Remove exams count and add ludomatics title

--- a/templates/landing-template.html
+++ b/templates/landing-template.html
@@ -8,15 +8,10 @@
 </head>
 <body>
     <div class="header">
-        <h1>📚 AnSheet - Sistema de Exámenes</h1>
+        <h1>📚 Ludomatics - Exámenes</h1>
         <p>Selecciona el examen que deseas realizar</p>
     </div>
 
     {{EXAM_SECTIONS}}
-
-    <div class="footer">
-        <p>AnSheet - Sistema de generación y calificación de exámenes</p>
-        <p>Total de exámenes disponibles: {{TOTAL_EXAMS}}</p>
-    </div>
 </body>
 </html> 
